--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,22 @@
-default: &default
-  adapter: mysql2
-  encoding: utf8
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
-
 development:
-  <<: *default
-  database: hitched_development
+  adapter: postgresql
+  database: wedding-development
+  pool: 5
+  timeout: 5000
+  encoding: unicode
 
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: hitched_test
+  adapter: postgresql
+  database: wedding-test
+  pool: 5
+  timeout: 5000
+  encoding: unicode
+production:
+  adapter: postgresql
+  database: wedding-production
+  pool: 5
+  timeout: 5000
+  encoding: unicode
